# cinema4d-mcp

./: .gitignore  LICENSE  LUMINARY_EXTENSIONS.md  README.md  pyproject.toml
c4d_plugin/: mcp_server_plugin.pyp  scene_nodes_patterns.py
cpp_shim/: README.md
data/: knowledge_manifest.json  node_port_schema.json  node_template_index.json  scene_nodes_atlas.json  verified_labels.json
data/recipes/: README.md  r1_circle_from_range.json
docs/: c4d_2026_api_gotchas.md  cpp_shim_design.md  cpp_shim_phase_a2_1_design.md  cpp_shim_phase_b_design.md  gesture_differ_design.md  gesture_differ_findings.md  phase_b_revised_after_maxon_docs.md  scene_nodes_capsule_theory.md  scene_nodes_doctrine.md  scene_nodes_gpt_handoff.md  scene_nodes_guide.md  scene_nodes_iterative_pattern.md  scene_nodes_movetogroup_breakthrough.md  scene_nodes_nodebase_study.md  scene_nodes_vocabulary.md  strategy_two_lanes.md
docs/druckli_studies/: INDEX.json  README.md  SCHEMA.md
docs/gesture_variants/: variant_1_add_input_object.json  variant_2_add_output.json  variant_3_add_input_nondefault_type.json  variant_4_param_value_change.json
docs/scene_nodes_advanced_studies/: CHECKPOINT_2026_05_04_scene_nodes_session.md  INDEX.json  PHASE3_CROSS_SCENE_RESULTS.md  PHASE3_SWEEP_RESULTS.md  PHASE3_SWEEP_v9_2.json  README.md  SCHEMA.md
scripts/: build_cpp_shim.sh  sn_phase3_rebuild.py  sync_to_installed.sh
src/cinema4d_mcp/: __init__.py  __main__.py  config.py  server.py
tests/: test_contract.py
tests/recipes/: apply_deformer_with_vmap_mask.json  fields_smoke.json  octane_osl_smoke.json  (+14 more)
(+190 files in other folders)
