[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cinema4d-mcp"
version = "0.2.0"
description = "Cinema 4D MCP Server — extended fork with introspection, plugin-dev, render-engine, and Octane-aware tooling for AI-assisted C4D workflows"
authors = [
    {name = "Spenser Dickerson", email = "spenser@sdimaging.art"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "starlette",
]

[project.scripts]
cinema4d-mcp-wrapper = "cinema4d_mcp:main_wrapper"
cinema4d-mcp = "cinema4d_mcp:main"
